test/fail/issue-5336b.mo
//MOC-FLAG --default-persistent-actors
//MOC-FLAG -A=M0194
import Actor "issue-5336b/actor";

actor class Main() {};
